# sim-agent

./: .env.example  .gitignore  README.md  pyproject.toml  sim-agent_project_overview.pptx  sim_agent.toml.example
src/sim_agent/: __init__.py  __main__.py  cli.py  config.py  downloader.py  llm.py  pdf_reader.py  pipeline.py  ranking.py  semantic_scholar.py  types.py
src/sim_agent/classify/: __init__.py  sim_type.py
src/sim_agent/extract/: __init__.py  core.py  schema.py  system_build.py
src/sim_agent/extract/domains/: __init__.py  md.py  qmmm.py
src/sim_agent/report/: html.py  markdown.py
src/sim_agent/store/: json_store.py  sqlite_store.py
src/sim_agent/validate/: __init__.py  sanity.py
tests/: test_classifier.py  test_md_extractor.py  test_pipeline_integration.py  test_pipeline_title_rerank.py  test_ranking_query_normalization.py  test_sanity.py  test_schema.py  test_semantic_scholar_fallback.py  test_system_build.py
