[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-agent"
version = "0.1.0"
description = "Unified simulation literature agent with MD-first deep extraction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
sim-agent = "sim_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
